extension/content/content.css
* {
    box-sizing: border-box;
}

.ytp-chapter-container:not(#__youtube-chapters-in-player__button) {
    display: none;
}

/* https://stackoverflow.com/questions/1817792/is-there-a-previous-sibling-selector */
div.ytp-left-controls > #__youtube-chapters-in-player__button {
    background-color: unset;
}
div.ytp-left-controls:hover > #__youtube-chapters-in-player__button {
    background-color: gray;
}

.ad-showing #__youtube-chapters-in-player__button {
    display: none;
}

.ytp-embed #__youtube-chapters-in-player__button button {
    width: 100%;
    cursor: pointer;
}

#__youtube-chapters-in-player__menu {
    left: 12px;
    bottom: 61px;
    z-index: 71;

    /* height: 100%; */
    height: calc(100% - 12px - 61px - 20px);
    max-height: calc(100% - 12px - 61px);
    /* width: 480px; */
    width: 100%;
    min-width: 250px;
    max-width: calc(100% - 12px - 12px);
    max-height: calc(100% - 12px - 61px);

    display: flex;
    flex-flow: column;
}
.ytp-big-mode #__youtube-chapters-in-player__menu {
    left: 24px;
    bottom: 70px;

    /* height: calc(100% - 24px - 70px) !important; */
    height: 80% !important;

    /* width: 640px; */
    width: 1280px;
    max-width: calc(100% - 24px - 24px);
    max-height: calc(100% - 24px - 70px);
}

#__youtube-chapters-in-player__menu .ytp-panel {
    width: 100%;
    height: 100%;
    /* height: calc(100% - 20px); */
    /* max-height: calc(100% - 20px); */
    /* overflow-y: scroll; */

    position: static;
}

#__youtube-chapters-in-player__menu .ytp-menuitem[aria-checked=true] {
    background-color: rgba(255, 255, 255, .1)
}
#__youtube-chapters-in-player__menu .ytp-menuitem[aria-checked=true] .ytp-menuitem-icon::before {
    content: '•';
    font-weight: bold;
}

#__youtube-chapters-in-player__menu__buttons {
    box-shadow: 0 0 0 1px rgba(255,255,255,.2);
}

#__youtube-chapters-in-player__menu__buttons button {
    text-align: center;
    width: 50%;
}

.highlighted {
    color: yellow !important;
    background-color: gray !important;
    opacity: 0.8;
}

.ytp-panel-menu {
    display: block !important;
    /* padding: 8px 0 !important; */

    width: 100% !important;
    height: 100% !important;
    overflow-y: scroll !important;
}

.ytp-menuitem {
    display: flex !important;
    flex-direction: row !important;
    align-items: flex-start !important;

    height: 30px !important;
    padding: 4px 0 0 0 !important;
}

.ytp-big-mode .ytp-panel > .ytp-panel-menu > .ytp-menuitem {
    display: flex !important;
    flex-direction: row !important;
    align-items: flex-start !important;

    height: 40px !important;
    padding: 4px 0 0 0 !important;
}

.ytp-menuitem-label, .ytp-menuitem-icon, .ytp-menuitem-content {
    padding: 0 4px !important;
    vertical-align: text-top !important;
}

.ytp-big-mode .ytp-menuitem-label, .ytp-menuitem-icon, .ytp-menuitem-content {
    padding: 0 4px !important;
    vertical-align: text-top !important;
}

.ytp-menuitem-icon {
    justify-self: flex-start !important;
    flex: 1.5rem 0 0 !important;
}

.ytp-menuitem-content {
    justify-self: flex-end !important;
    flex: 5rem 0 0 !important;
}

.ytp-menuitem-label {
    justify-self: flex-start !important;
}

.ytp-big-mode .ytp-panel > .ytp-panel-menu > .ytp-menuitem > .ytp-menuitem-icon {
    display: unset !important;
    justify-self: flex-start !important;
    flex: 2rem 0 0 !important;
}

.ytp-big-mode .ytp-panel > .ytp-panel-menu > .ytp-menuitem > .ytp-menuitem-content {
    display: unset !important;
    flex: 8rem 0 0 !important;
}

.ytp-big-mode .ytp-panel > .ytp-panel-menu > .ytp-menuitem > .ytp-menuitem-label {
    display: unset !important;
    justify-self: flex-start !important;
}

